--- a/exercicio/exercicio.html
+++ b/exercicio/exercicio.html
@@ -67,6 +67,7 @@
 		</div>
 	</div> 
  	<script src="js/jquery.min.js"></script>
- 	<script src="js/exercicio.js"></script>
+ 	<script src="data/exercicio.js"></script>
+ 	<script src="js/index.js"></script>
 </body>
 </html>
