--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -21,20 +21,24 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-light bg-faded" style="background-color:rgb(255,208,0);">
-    <div class="container-fluid">
+  <nav class="navbar navbar-collapse" style="background-color:rgb(255,208,0);">
+    <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
           <img alt="Brand img-responsive" src="./assets/logo_cliente.png">
         </a>
       </div>
-      <div>
-        <p class="navbar-text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-      </div>
+
+      <ul id="navbar-bona" class="nav navbar-nav navbar-right collapse navbar-collapse">
+        <li><a class="text_nav">Lorem ipsum dolor sit amet, consectetur adipiscing</a></li>
+        <ul></ul>
+    </div>
     </div>
   </nav>
-  <div class="img_back img-fluid lead">
-    <div class="conteudo_box">
+
+
+  <div class="img_back img-fluid img-responsive lead">
+    <div class="container">
       <div class="number">
         <p>01.</p>
       </div>
@@ -47,10 +51,9 @@
       <p class="nulla_text"><br>Nulla fibillus odio, at rutrum velit consequat lorem,</br>element eget odio id, iaculis
         molestie nibh. Sed auctor,<br>erat id tempor fringilla, lingula magna.</br></p>
     </div>
-    <div class="fundo_black">
-     
-    </div>
-    <!-- Panel -->
+  </div>
+
+  <div class="fundo_black">
     <div class="panel panel-default text-center">
       <div class="panel-body text-dark">
         <h3 class="title text-dark">"Nullam iaculis, orci in fermentum commodo, nunc rhoncus augue, sit amet faucibus
@@ -60,59 +63,64 @@
           malesuada porta ante</h4>
       </div>
     </div>
-    <div class="row  row_black text-left">
-      <h2> Lorem ipsum dolot sit ammenet</h2>
-      <div class="text_one">
-        <div class="col-md-4">
-          <h4>Mauris eget magna maecenas non nulla urna. Suspendisse non nisi sit amet metus fapibus pretium. Aliquam in
-            lebero eu mi pellentesque consectetetur. In congue orci in lectus ultricies effictur. Class aptent taciti
-            sociosque ad litora torquent per conubia nostra, per inceptos himenaeos.</h4>
+    <div class="container">
+      <div class="row row_black text-left">
+        <h2> Lorem ipsum dolot sit ammenet</h2>
+        <div class="text_one">
+          <div class="col-md-4">
+            <h4>Mauris eget magna maecenas non nulla urna. Suspendisse non nisi sit amet metus fapibus pretium. Aliquam in
+              lebero eu mi pellentesque consectetetur. In congue orci in lectus ultricies effictur. Class aptent taciti
+              sociosque ad litora torquent per conubia nostra, per inceptos himenaeos.</h4>
+          </div>
+          <div class="col-md-4 text_row">
+            <h4>Interger et felis nec libero molestie blanditi nec id nunc. Mauris auctor eu lacus at varius. Donec
+              feugiat velit eu est rutrum, id congue nulla facilisis. Praesent venenatis at dui eget vehicula. Interger
+              sit amet rhoncus odio. Aenean lorem nulla, dapibus vitae loren et, tincidunt porta.</h4>
+          </div>
         </div>
-        <div class="col-md-4 text_row">
-          <h4>Interger et felis nec libero molestie blanditi nec id nunc. Mauris auctor eu lacus at varius. Donec
-            feugiat velit eu est rutrum, id congue nulla facilisis. Praesent venenatis at dui eget vehicula. Interger
-            sit amet rhoncus odio. Aenean lorem nulla, dapibus vitae loren et, tincidunt porta.</h4>
-        </div>
-      </div>
-        </div>
-        <div class="jumbotron">
-          <div class="container"></div>
-          <!-- Cards -->
-          <div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <div class="caption text-center">
-        <h2>Lorem ipsum sit ammet</h2>
-        <img class="box_cones" src="./assets/icon cone.png" alt="cones listrados" class="img-rounded">     
-        <h3>Morbi porta, diam ornare sodales aliquam, nulla felis commodo dui</h3>
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <div class="caption text-center">
-        <h2>Lorem ipsum sit ammet</h2>
-        <img class="box_cones" src="./assets/icon cone.png" alt="cones listrados">     
-        <h3>Morbi porta, diam ornare sodales aliquam, nulla felis commodo dui</h3>
-      </div>
-    </div>
+  <!-- Panel -->
+  <div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <div class="caption text-center">
+              <h2>Lorem ipsum sit ammet</h2>
+              <img class="box_cones" src="./assets/icon cone.png" alt="cones listrados" class="img-rounded">
+              <h3>Morbi porta, diam ornare sodales aliquam, nulla felis commodo dui</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <div class="caption text-center">
+              <h2>Lorem ipsum sit ammet</h2>
+              <img class="box_cones" src="./assets/icon cone.png" alt="cones listrados">
+              <h3>Morbi porta, diam ornare sodales aliquam, nulla felis commodo dui</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <div class="caption text-center">
+              <h2>Lorem ipsum sit ammet</h2>
+              <img class="box_cones" src="./assets/icon cone.png" alt="cones listrados">
+              <h3>Morbi porta, diam ornare sodales aliquam, nulla felis commodo dui</h3>
+            </div>
+          </div>
+        </div>
+      </div></div>
+    <!-- Thumbnail -->
   </div>
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <div class="caption text-center">
-        <h2>Lorem ipsum sit ammet</h2>
-        <img class="box_cones" src="./assets/icon cone.png" alt="cones listrados">    
-        <h3>Morbi porta, diam ornare sodales aliquam, nulla felis commodo dui</h3>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <!-- Footer -->
   <footer class="text-center fixed" style="background-color: #000000; color:#ffffff">
     <p>Teste realizado por <strong> Josiane Santiago </strong>| Desenvolvedora Front-end. Dezembro/2019</p>
-  </footer> 
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
